TODOs and comments, mostly.

--- a/TODO.txt
+++ b/TODO.txt
@@ -55,25 +55,14 @@ Mouse clicks:
 
 ---
 
-Don't assume that Python exists...  Don't call initializePyGTK or
-PyGILState_Ensure/PyGILState_Release unless PYOOFCANVAS is defined.
-Also don't run swig if it's not defined.
-
 Do we want to support different scales in the x and y directions?
 CanvasDot and CanvasLayer::pixel2user(double) assume that the scales
 are the same.
 
 ---
 
-Use Pango instead of Cairo::ToyFontFace?  Seems like a lot of work.
-
 Define CanvasGroup to allow a combination of objects to be defined and
 duplicated at different positions and scales?
-
-Instead of a separate non-scaled triangle class for arrowheads, make
-arrowheads an option on the CanvasSegment.  Then the direction can be
-inferred from the segment direction.  The head can be scaled or not,
-like CanvasText.
 
 Should objects be changeable?  When an object is added, removed, or
 changed, should the layer be told so that just some part of it can be
@@ -82,3 +71,7 @@ updated?  Or is Cairo already taking care of all that for us?
 Should default values for parameters be settable?  After calling
 CanvasText::setFont, should the next text item created automatically
 use the same font?
+
+Should it be possible to set line widths in device units as well as
+user units?
+
