--- a/TODO.txt
+++ b/TODO.txt
@@ -115,4 +115,18 @@ Would this fix the blurriness caused by antialiasing?
 
 OOFCanvas should have versions of its header files that don't load any
 cairo or pango headers, since external programs loading oofcanvas.h
-don't need to load the cairo or pango headers. 
+don't need to load the cairo or pango headers.   DONE
+
+-----------
+
+Add CanvasSpline, using Cairo::Context::curve_to.
+Have both closed (fillable) and open versions.
+CanvasSpline::start(x,y)
+CanvasSpline::addPoint(pt, pt1, pt2)  -- pt1, pt2 are guide points.
+Bounding box includes end points and guide points? May be too large,
+but is always large enough.
+
+Enforce smooth curves? (where two splines meet, guide points and end
+point must be colinear).
+https://pythoninformer.com/python-libraries/pycairo/bezier-curves/
+https://www.cairographics.org/manual/cairo-Paths.html#cairo-curve-to
