--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.0.2
+
+Fixed build problems that showed up in OOF2 when using MacPorts, and
+could theoretically occur here too.
+
 1.0.1
 
 Added Rectangle constructor in python.
