Added the ownership arg to PythonExportable::pythonObject.
It needs to be compatible with the same method in OOF2.

--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,9 @@ When creating CanvasItems in Python, use the classes' "create" methods
 instead of the constructors.  This prevents Python from trying to
 destroy them.
 
+Added the bool argument to PythonExportableBase<>::pythonObject()
+controlling ownership of the exported object.
+
 
 1.0.2
 
