Use pdf version 1.4 when saving files.
Possibly due to a version update, cairo starting producing
nonreproducible pdf files, which made oof2 tests fail.  Normal pdf
files contain an ascii timestamp, which we can deal with, but these
new pdf files contained differing binary data.  Restricting the
output to pdf version 1.4 seems to fix the problem.

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ controlling ownership of the exported object.
 Added Canvas::datadump, which writes the contents of the canvas to a
 text file, for debugging.
 
+Restrict pdf output to pdf version 1.4, for reproducibility in tests.
 
 1.0.2
 
