Fixed two bugs.
The margin was being computed incorrectly.  Now it's the specified
size.

The corners of pixels are computed more carefully when drawing
images with drawPixelByPixel==true.  This eliminates roundoff
error that could sometimes cause rows of columns of missing pixels.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+1.1.2
+
+Fixed a problem that could lead to missing rows or columns of screen
+pixels when displaying images.  I think.
+
+Fixed the margin computation, which was off by a factor of two.
+(There's a margin on both sides!  Who knew?)
+
 1.1.1
 
 Changed the names of the user-settable variables in CMakeLists.txt, so
